--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Get the status of a given port number</description>
 	<properties>
 		<java.version>17</java.version>
+		<packaging>jar</packaging>
 	</properties>
 	<dependencies>
 		<dependency>
